frontend/src/scss/settings.scss
/**
 * src/styles/settings.scss
 *
 * Configures SASS variables and Vuetify overwrites
 */

// https://vuetifyjs.com/features/sass-variables/`
// @use 'vuetify/settings' with (
//   $color-pack: false
// );
@use 'sass:map';

@use 'vuetify/settings' with (
  $heading-font-family: (
    'Inter',
    sans-serif,
    emoji,
  ),
  $body-font-family: (
    'Inter',
    sans-serif,
    emoji,
  ),
  $font-weights: (
    'light': 200,
    'regular': 400,
    'medium': 500,
    'bold': 600,
  ),
  $typography: (
    'h1': (
      'size': 6rem,
      'weight': 200,
      'line-height': 1.428571429,
      'letter-spacing': -0.022em,
    ),
    'h2': (
      'size': 3.75rem,
      'weight': 200,
      'line-height': 1.428571429,
      'letter-spacing': -0.022em,
    ),
    'h3': (
      'size': 3rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': -0.0215em,
    ),
    'h4': (
      'size': 2.125rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': -0.021em,
    ),
    'h5': (
      'size': 1.5rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': -0.019em,
    ),
    'h6': (
      'size': 1.25rem,
      'weight': 600,
      'line-height': 1.428571429,
      'letter-spacing': -0.0125em,
    ),
    'subtitle-1': (
      'size': 1.125rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': -0.017em,
    ),
    'subtitle-2': (
      'size': 0.875rem,
      'weight': 600,
      'line-height': 1.375rem,
      'letter-spacing': -0.006em,
    ),
    'body-2': (
      'size': 0.8125rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': -0.006em,
    ),
    'body-1': (
      'size': 1rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': -0.011em,
    ),
    'caption': (
      'size': 0.75rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': 0em,
    ),
    'overline': (
      'size': 0.625rem,
      'weight': 400,
      'line-height': 1.428571429,
      'letter-spacing': 0.01em,
    ),
  ),
  $icon-sizes: (
    'x-small': 16px,
    'small': 20px,
    'default': 24px,
    'large': 36px,
    'x-large': 48px,
  ),
  $button-text-letter-spacing: 0.25px,
  $chip-icon-size-multiplier: 1,
  $button-text-transform: none,
  $bottom-navigation-min-width: 60px,
  $menu-content-border-radius: 0 0 4px 4px,
  $card-actions-padding: 16px,
  $expansion-panel-title-padding: 16px,
  $expansion-panel-text-padding: 0 16px 16px,
  $toolbar-title-margin: 16px,
  $skeleton-loader-gutter: 0,
  $skeleton-loader-button-width: 100%,
  $skeleton-loader-actions-padding: 0,
  $skeleton-loader-avatar-height: 100%,
  $skeleton-loader-avatar-margin: 0,
  $skeleton-loader-avatar-width: 100%,
  $toolbar-title-font-weight: 500,
  $toolbar-title-letter-spacing: 0.25px,
  $list-item-icon-margin-start: 20px,
  $list-item-icon-margin-end: 16px
);

